--- a/Home_page/react-tailwindcss-portfolio-main/public/index.html
+++ b/Home_page/react-tailwindcss-portfolio-main/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%PUBLIC_URL%/favicon.png" />
+		<!-- <link rel="icon" href="%PUBLIC_URL%/favicon.png" style="width: 600px; height: 64px;"> -->
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
 		<meta
@@ -24,7 +24,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-		<title>city</title>
+		<title>City Construction </title>
+		<!-- <title> 
+			<img src="%PUBLIC_URL%/favicon.png" alt="Your Image Title">
+		  </title> -->
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
